--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/course-images.css') }}">
     {% block extra_css %}{% endblock %}
 </head>
 
@@ -92,7 +93,7 @@
             {% for category, message in messages %}
             <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
                 {{ message }}
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                <button type="button" class="btn-close" aria-label="Close"></button>
             </div>
             {% endfor %}
             {% endif %}
@@ -170,6 +171,7 @@
 
     <!-- Custom JavaScript -->
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/alert.js') }}"></script>
     {% block extra_js %}{% endblock %}
 </body>
 
