--- a/templates/courses/edit.html
+++ b/templates/courses/edit.html
@@ -21,9 +21,9 @@
                     <span class="badge bg-primary p-2">{{ course.name }}</span>
                 </div>
                 <div class="card-body">
-                    <form method="POST" class="needs-validation" novalidate>
+                    <form method="POST" class="needs-validation" enctype="multipart/form-data" novalidate>
                         {{ form.hidden_tag() }}
-                        
+
                         <div class="mb-3">
                             <label for="name" class="form-label">Course Name <span class="text-danger">*</span></label>
                             {{ form.name(class_="form-control", id="name") }}
@@ -47,22 +47,25 @@
                                 {% endfor %}
                             </div>
                             {% endif %}
-                            <div class="form-text">Provide a detailed description of what students will learn in this course.</div>
+                            <div class="form-text">Provide a detailed description of what students will learn in this
+                                course.</div>
                         </div>
-                        
+
                         <div class="mb-4">
-                            <label for="image_url" class="form-label">Course Image URL</label>
-                            {{ form.image_url(class_="form-control", id="image_url") }}
-                            {% if form.image_url.errors %}
-                            <div class="invalid-feedback d-block">
-                                {% for error in form.image_url.errors %}
-                                {{ error }}
-                                {% endfor %}
+                            <label for="course_image" class="form-label">Course Image</label>
+                            <input type="file" class="form-control" id="course_image" name="course_image"
+                                accept="image/*">
+                            <div class="form-text">Upload a new image for your course thumbnail (JPG, PNG). Maximum size
+                                2MB.</div>
+                            {% if course.image_url %}
+                            <div class="mt-2">
+                                <img src="{{ url_for('static', filename=course.image_url) }}" alt="Current course image"
+                                    class="img-thumbnail" style="max-height: 200px">
+                                <div class="form-text">Current image</div>
                             </div>
                             {% endif %}
-                            <div class="form-text">Add an image URL for your course thumbnail. Leave blank to use a default image.</div>
                         </div>
-                        
+
                         <div class="mb-3">
                             <h5>Course Settings</h5>
                             <div class="card bg-light">
@@ -70,47 +73,58 @@
                                     <div class="mb-3">
                                         <label class="form-label d-block">Course Visibility</label>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="visibility" id="visibility_public" value="public" checked>
+                                            <input class="form-check-input" type="radio" name="visibility"
+                                                id="visibility_public" value="public" checked>
                                             <label class="form-check-label" for="visibility_public">Public</label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="visibility" id="visibility_private" value="private">
+                                            <input class="form-check-input" type="radio" name="visibility"
+                                                id="visibility_private" value="private">
                                             <label class="form-check-label" for="visibility_private">Private</label>
                                         </div>
                                     </div>
-                                    
+
                                     <div class="mb-3">
                                         <label class="form-label d-block">Level</label>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="level" id="level_beginner" value="beginner" checked>
+                                            <input class="form-check-input" type="radio" name="level"
+                                                id="level_beginner" value="beginner" checked>
                                             <label class="form-check-label" for="level_beginner">Beginner</label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="level" id="level_intermediate" value="intermediate">
-                                            <label class="form-check-label" for="level_intermediate">Intermediate</label>
+                                            <input class="form-check-input" type="radio" name="level"
+                                                id="level_intermediate" value="intermediate">
+                                            <label class="form-check-label"
+                                                for="level_intermediate">Intermediate</label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="level" id="level_advanced" value="advanced">
+                                            <input class="form-check-input" type="radio" name="level"
+                                                id="level_advanced" value="advanced">
                                             <label class="form-check-label" for="level_advanced">Advanced</label>
                                         </div>
                                     </div>
-                                    
+
                                     <div>
                                         <label class="form-label d-block">Categories</label>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="checkbox" name="categories" id="category_programming" value="programming">
-                                            <label class="form-check-label" for="category_programming">Programming</label>
+                                            <input class="form-check-input" type="checkbox" name="categories"
+                                                id="category_programming" value="programming">
+                                            <label class="form-check-label"
+                                                for="category_programming">Programming</label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="checkbox" name="categories" id="category_design" value="design">
+                                            <input class="form-check-input" type="checkbox" name="categories"
+                                                id="category_design" value="design">
                                             <label class="form-check-label" for="category_design">Design</label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="checkbox" name="categories" id="category_business" value="business">
+                                            <input class="form-check-input" type="checkbox" name="categories"
+                                                id="category_business" value="business">
                                             <label class="form-check-label" for="category_business">Business</label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="checkbox" name="categories" id="category_marketing" value="marketing">
+                                            <input class="form-check-input" type="checkbox" name="categories"
+                                                id="category_marketing" value="marketing">
                                             <label class="form-check-label" for="category_marketing">Marketing</label>
                                         </div>
                                     </div>
