--- a/templates/dashboard/student.html
+++ b/templates/dashboard/student.html
@@ -37,13 +37,14 @@
                             </a>
                         </li>
                         <li>
-                            <a id="schedule-nav-item" href="{{ url_for('schedule_index', course_id=enrolled_courses[0].id) }}">
-                                <i class="fas fa-calendar-alt"></i> Schedule
+                            <a href="{{ url_for('student_assignments') }}">
+                                <i class="fas fa-tasks"></i> Assignments
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <i class="fas fa-tasks"></i> Assignments
+                            <a id="schedule-nav-item"
+                                href="{{ url_for('schedule_index', course_id=enrolled_courses[0].id) if enrolled_courses else '#' }}">
+                                <i class="fas fa-calendar-alt"></i> Schedule
                             </a>
                         </li>
                         <li>
@@ -58,7 +59,12 @@
                         </li>
                         <li>
                             <a href="{{ url_for('profile') }}">
-                                <i class="fas fa-user-cog"></i> Settings
+                                <i class="fas fa-user-cog"></i> Profile
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{ url_for('logout') }}">
+                                <i class="fas fa-sign-out-alt"></i> Logout
                             </a>
                         </li>
                     </ul>
