--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
-    <!-- Custom CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">    <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/course-images.css') }}">
+    {% if request.path.startswith('/course') and ('forum' in request.path) %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/forum.css') }}">
+    {% endif %}
     {% block extra_css %}{% endblock %}
 </head>
 
@@ -167,11 +168,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-    <!-- Custom JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>    <!-- Custom JavaScript -->
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <script src="{{ url_for('static', filename='js/alert.js') }}"></script>
+    {% if request.path.startswith('/course') and ('forum' in request.path) %}
+    <script src="{{ url_for('static', filename='js/forum.js') }}"></script>
+    {% endif %}
     {% block extra_js %}{% endblock %}
 </body>
 
