--- a/templates/courses/instructor_courses.html
+++ b/templates/courses/instructor_courses.html
@@ -47,7 +47,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="{{ url_for('instructor_students') }}">
                             <i class="fas fa-users"></i> Students
                         </a>
                     </li>
