--- a/templates/courses/student_courses.html
+++ b/templates/courses/student_courses.html
@@ -199,7 +199,7 @@
                         <div class="card course-card h-100 shadow-sm">
                             <div class="card-header bg-white p-0">
                                 {% if course.image_url %}
-                                <img src="{{ course.image_url }}" class="card-img-top course-image"
+                                <img src="{{ url_for('static', filename=course.image_url) }}" class="card-img-top course-image"
                                     alt="{{ course.name }}">
                                 {% else %}
                                 <div class="card-img-top course-image-placeholder">
