--- a/templates/index.html
+++ b/templates/index.html
@@ -18,12 +18,16 @@
             <div class="col-lg-6 mt-4 mt-lg-0">
                 <!-- Hero Image -->
                 <div class="hero-image text-center">
-                    <svg class="img-fluid" xmlns="http://www.w3.org/2000/svg" width="500" height="300"
+                    <img src="https://images.unsplash.com/photo-1610484826967-09c5720778c7?q=80&w=1170&auto=format&fit=crop" 
+                        class="img-fluid rounded" 
+                        alt="Students learning online">
+                </div>
+                    <!-- <svg class="img-fluid" xmlns="http://www.w3.org/2000/svg" width="500" height="300"
                         viewBox="0 0 500 300">
                         <rect width="500" height="300" fill="#f0f0f0" />
                         <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-size="20"
                             fill="#aaa">Hero Image Placeholder</text>
-                    </svg>
+                    </svg> -->
                 </div>
             </div>
         </div>
